--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">小温暖</string>
-    <string name="app_version">v1.1.2</string>
+    <string name="app_version">v1.1.3</string>
     <string name="app_slogan">Warm your heart</string>
 
     <!--footer-->
     <string name="footer_loading">努力加载中...</string>
     <string name="footer_network_error">点击重新加载</string>
     <string name="footer_end">已经到底了</string>
+    <!--header-->
+    <string name="my_header_network_error">网络不给力，点击刷新</string>
 
     <!--nav menu-->
     <string name="nav_home">首页</string>
