--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,12 +1,16 @@
 <resources>
     <string name="app_name">Little Warm</string>
-    <string name="app_version">v1.1.3</string>
+    <string name="app_version">v1.1.3.1</string>
     <string name="app_slogan">Warm your heart</string>
 
     <!--footer-->
     <string name="footer_loading">Loading...</string>
     <string name="footer_network_error">Click to reload</string>
     <string name="footer_end">Already bottom</string>
+
+    <!--header-->
+    <string name="my_header_network_error">Your network is unavailable, please try again.</string>
+    <string name="my_header_network_timeout">Request timeout, Please check your network status or try it later.</string>
 
     <!--nav menu-->
     <string name="nav_home">Home</string>
@@ -25,6 +29,4 @@
 
     <string name="domain_name">http://m.xiaowennuan.net</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
