--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">小温暖</string>
-    <string name="app_version">v1.1.3</string>
+    <string name="app_version">v1.1.3.1</string>
     <string name="app_slogan">Warm your heart</string>
 
     <!--footer-->
@@ -9,6 +9,7 @@
     <string name="footer_end">已经到底了</string>
     <!--header-->
     <string name="my_header_network_error">网络不给力，点击刷新</string>
+    <string name="my_header_network_timeout">请求超时，请检查网络或稍后再试。</string>
 
     <!--nav menu-->
     <string name="nav_home">首页</string>
@@ -25,6 +26,4 @@
 
     <string name="domain_name">http://m.xiaowennuan.net</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
